--- a/mobile/fiapDesafio/app/src/main/res/layout/fragment_palestras.xml
+++ b/mobile/fiapDesafio/app/src/main/res/layout/fragment_palestras.xml
@@ -3,14 +3,24 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center">
+    android:layout_gravity="center"
+    android:padding="5dp">
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="5dp"
+        android:text="Lista de Palestras"
+        android:textAlignment="center"
         android:textColor="@color/colorAccent"
-        android:text="teste de alinhamento"
-        android:textSize="20dp"
-        android:layout_gravity="center"/>
+        android:textSize="20dp" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/lista_palestras"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
