--- a/mobile/fiapDesafio/app/src/main/res/values/colors.xml
+++ b/mobile/fiapDesafio/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#ed145b</color>
     <color name="colorPrimaryDark">#161616</color>
     <color name="colorAccent">#D84072</color>
+
+
+    <color name="vermelho">#E91E3C</color>
 </resources>
