--- a/mobile/fiapDesafio/app/src/main/res/layout/fragment_palestras.xml
+++ b/mobile/fiapDesafio/app/src/main/res/layout/fragment_palestras.xml
@@ -16,11 +16,34 @@
         android:textColor="@color/colorAccent"
         android:textSize="20dp" />
 
+    <Button
+        android:id="@+id/button_limpar_filtro"
+        android:layout_width="wrap_content"
+        android:layout_height="30sp"
+        android:layout_gravity="center"
+        android:padding="5dp"
+        android:layout_margin="5dp"
+        android:text="Limpar Filtro"
+        android:textColor="@android:color/white"
+        android:background="@drawable/padrao_botoes"
+        android:textSize="14dp" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/lista_palestras"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
     </android.support.v7.widget.RecyclerView>
+
+    <TextView
+        android:id="@+id/aviso_erro"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="5dp"
+        android:text="Lista de palestras vazia no momento."
+        android:textAlignment="center"
+        android:textColor="@color/colorAccent"
+        android:textSize="20dp" />
 
 </LinearLayout>
