--- a/mobile/fiapDesafio/app/src/main/res/layout/palestra_item.xml
+++ b/mobile/fiapDesafio/app/src/main/res/layout/palestra_item.xml
@@ -40,6 +40,7 @@
                     android:id="@+id/titulo_palestra"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/colorPrimary"
                     android:text="Gestão de pessoas por competencias"/>
                 <TextView
                     android:layout_marginTop="5dp"
