--- a/mobile/fiapDesafio/app/src/main/res/values/colors.xml
+++ b/mobile/fiapDesafio/app/src/main/res/values/colors.xml
@@ -5,6 +5,6 @@
     <color name="colorAccent">#D84072</color>
 
 
-    <color name="vermelho">#E91E3C</color>
+    <color name="vermelho">#FF0000</color>
     <color name="colorPrimaryOfuscado">#A3E71D5F</color>
 </resources>
