--- a/mobile/fiapDesafio/app/src/main/res/layout/activity_login.xml
+++ b/mobile/fiapDesafio/app/src/main/res/layout/activity_login.xml
@@ -11,9 +11,17 @@
         android:orientation="vertical"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
+        android:gravity="center"
         >
 
+        <ImageView
+            android:layout_width="85dp"
+            android:layout_height="85dp"
+            android:src="@drawable/ic_lecture"
+            android:tint="@color/colorPrimary"/>
+
         <EditText
+            android:layout_margin="5dp"
             android:id="@+id/text_email_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -21,17 +29,37 @@
             />
 
         <EditText
+
+            android:layout_margin="5dp"
+            android:inputType="textPassword"
             android:id="@+id/text_senha"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Senha"/>
+            android:hint="Senha"
+            />
 
         <Button
+            android:layout_marginTop="5dp"
             android:id="@+id/button_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Login"/>
+            android:text="Login"
+            android:textColor="@android:color/white"
+            android:background="@drawable/padrao_botoes"
+            />
+
+        <TextView
+            android:id="@+id/text_cadastrar_se"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Cadastrar-se"
+            android:textSize="16dp"
+            android:textColor="@color/colorPrimary"
+            android:layout_margin="10dp"
+            />
 
     </LinearLayout>
+
+
 
 </LinearLayout>
